--- a/Bootstrap/css/estilos.css
+++ b/Bootstrap/css/estilos.css
@@ -1,3 +1,6 @@
+body{
+  background-color: #9370DB;
+}
 .fondo-header{
   background-color:pink;
   border-radius: 5px;
@@ -15,10 +18,10 @@
 .nav{
   background-color: orange;
   font-size:1.5em;
-
+  border-radius: 5px;
 }
 .fondo-contenido{
-  background-color: purple;
+  background-color: #F29DB5;
   margin-top: 10px;
   border-radius: 5px;
 }
