--- a/Materialize/css/estilos.css
+++ b/Materialize/css/estilos.css
@@ -1,3 +1,10 @@
+body{
+background-image: url(../imagen/fondo.jpg);
+background-repeat: no-repeat;
+background-size:auto;
+background-attachment: fixed;
+}
+
 .logo{
   width: 200px;
   margin: 20px;
